Some extra setup

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,9 +13,10 @@
     <div class="main-content">
         {{>header}}
         <p>Use this site to get your weather</p>
+        <p>Search formate first "Country" then "State" for accurate result</p>
 
         <form action="">
-            <input type="text" placeholder="Location">
+            <input type="text" placeholder="Ex- Bangladesh Dhaka">
             <button>Search</button>
         </form>
 
@@ -24,6 +25,9 @@
         <p id="message-2"></p>
         <p id="message-3"></p>
         <p id="message-4"></p>
+        <p id="message-5"></p>
+        <p id="message-7"></p>
+
     </div>
     
     {{>footer}}
