--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,7 +13,7 @@
     <div class="main-content">
         {{>header}}
         <p>Use this site to get your weather</p>
-        <p>Search formate first "Country" then "State" for accurate result</p>
+        <p>Search format "first 'Country' then 'State'" for accurate result</p>
 
         <form action="">
             <input type="text" placeholder="Ex- Bangladesh Dhaka">
